fix maildir handling of tmp files for imap offline store, and notifications for moved/deleted local msgs with maildir, r=standard8, bug 748807